--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AzureSqlConnection": "Server=tcp:expense-tracker-server-alan.database.windows.net,1433;Initial Catalog=ExpenseTrackerDB;Persist Security Info=False;User ID=Alanxing;Password=Sup3000gt;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +10,4 @@
   },
   "AllowedHosts": "*"
 }
+
