updated SendGrid API

--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "AzureSqlConnection": "Server=tcp:expense-tracker-server-alan.database.windows.net,1433;Initial Catalog=ExpenseTrackerDB;Persist Security Info=False;User ID=Alanxing;Password=Sup3000gt;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "AzureSqlConnection": "Server=tcp:expense-tracker-server-alan.database.windows.net,1433;Initial Catalog=ExpenseTrackerDB;Persist Security Info=False;User ID=Alanxing;Password=YourActualPassword;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "SendGrid": {
+    "ApiKey": "SG.MgKSuDhQQimrXfJb8Dl05Q.LhDHJUSvSKfPUdheyyvJE4rHcvndjrriaf4dKKEUhns"
   },
   "Logging": {
     "LogLevel": {
@@ -10,4 +13,3 @@
   },
   "AllowedHosts": "*"
 }
-
