--- a/TransactionService/appsettings.json
+++ b/TransactionService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "AzureSqlConnection": "Server=tcp:expense-tracker-server-alan.database.windows.net,1433;Initial Catalog=ExpenseTrackerDB;Persist Security Info=False;User ID=Alanxing;Password=Sup3000gt;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "AllowedHosts": "*"
 }
