remove extra project

--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -11,5 +11,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "A0bZ!s%49zLpTq3Xx2&xP3ZKw8mN$yV3",
+    "Issuer": "MyExpenseTrackerAPI",
+    "Audience": "MyExpenseTrackerClient"
+  },
   "AllowedHosts": "*"
 }
