--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "AzureSqlConnection": "Server=tcp:expense-tracker-server-alan.database.windows.net,1433;Initial Catalog=ExpenseTrackerDB;Persist Security Info=False;User ID=Alanxing;Password=Sup3000gt;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "AzureSqlConnection": "Server=tcp:{DB_SERVER};Initial Catalog={DB_NAME};Persist Security Info=False;User ID={DB_USER};Password={DB_PASSWORD};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "SendGrid": {
-    "ApiKey": "SG.MgKSuDhQQimrXfJb8Dl05Q.LhDHJUSvSKfPUdheyyvJE4rHcvndjrriaf4dKKEUhns"
+    "ApiKey": "{SENDGRID_API_KEY}"
   },
   "Logging": {
     "LogLevel": {
@@ -12,9 +12,9 @@
     }
   },
   "Jwt": {
-    "Key": "A0bZ!s%49zLpTq3Xx2&xP3ZKw8mN$yV3",
-    "Issuer": "MyExpenseTrackerAPI",
-    "Audience": "MyExpenseTrackerClient"
+    "Key": "{JWT_SECRET_KEY}",
+    "Issuer": "{JWT_ISSUER}",
+    "Audience": "{JWT_AUDIENCE}"
   },
   "AllowedHosts": "*"
 }
